--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+.navbar{
+  background-color: rgb(103, 103, 252);
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+.navbar *{
+  margin: 0 auto;
+  color: aliceblue;
+}
+.detailsList{
+  margin: 0 auto;
+}
